--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,9 +1,9 @@
 name: svgaplayer_flutter_example
 description: Demonstrates how to use the svgaplayer_flutter plugin.
-publish_to: 'none'
+publish_to: "none"
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -11,7 +11,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +25,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -33,8 +32,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/pin_jump.svga
-   - assets/angel.svga
+    - assets/pin_jump.svga
+    - assets/angel.svga
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
